# intro-oop1

./: .clangd  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  diemgiuaky.md  note.md
.claude/skills/board-modify/: SKILL.md
.github/workflows/: msvc-build.yml
.serena/: project.yml
baigiang/: CSLTr_Week01.ppsx  CSLTr_Week02.ppsx  CSLTr_Week03.ppsx  CSLTr_Week04.ppsx  CSLTr_Week05.ppsx  CSLTr_week06.ppsx  CSLTr_week07.ppsx  CSLTr_week08.ppsx  CSLTr_week09.ppsx  CSLTr_week10.ppsx
baigiang/markdown/: CSLTr_Week04.md  CSLTr_Week05.md  CSLTr_Week06.md  CSLTr_Week07.md  CSLTr_Week08.md  DeCuongChiTiet_OOP1.md  DoAnCaro.md
baigiang/markdown/week01_images/: image16.wmf
baigiang/markdown/week03_images/: image10.wmf  image11.wmf  image12.wmf  image15.wmf  image17.wmf  image20.wmf  image22.wmf  image23.wmf  image4.wmf  image5.wmf  image7.wmf  image8.wmf
baigiang/markdown/week04_images/: image10.wmf  image11.wmf  image12.wmf  image14.wmf  image3.wmf  image4.wmf  image6.wmf  image8.wmf
baigiang/markdown/week06_images/: image3.wmf
cf/OOP-Challenge/: F.md
cf/OOP-Challenge/treasure2/: build.sh  judge.h  runner.cpp  treasure2.cpp  treasure2lib.h  treasure2lib_local.cpp
ci-assets/: CMakeLists.bundle.txt  CaroGame.sln  CaroGame.vcxproj  README.bundle.md
doancaro/: .gitignore  AI_ALGORITHM.md  CMakeLists.txt  README.md
doancaro/assets/models/: fire_rune.glb  table.glb
doancaro/assets/rapfi/: config.toml
doancaro/src/: AIPlayer.cpp  AIPlayer.h  AudioManager.cpp  AudioManager.h  Board.cpp  Board.h  DifficultyScreen.cpp  DifficultyScreen.h  FileManager.cpp  FileManager.h  Fonts.cpp  Fonts.h  Game.cpp  Game.h  GameScreen.cpp  GameScreen.h  MenuScreen.cpp  MenuScreen.h  OpeningBook.cpp  OpeningBook.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h  RapfiEngine.cpp  RapfiEngine.h  Renderer.cpp  Renderer.h  SaveLoadScreen.cpp  SaveLoadScreen.h  SettingsScreen.cpp  SettingsScreen.h  StoryContent.cpp  StoryContent.h  StoryMode.cpp  StoryMode.h  StorySigil.cpp  StorySigil.h  Theme.cpp  Theme.h  (+3 more)
doancaro/storyline/: character_bible.org  storyline_final.org
doancaro/tests/: test_ai.cpp  test_board.cpp  test_opening_book.cpp
doancaro/tools/: gallery_main.cpp
doancaro/vs2022/: ALL_BUILD.vcxproj  CPackConfig.cmake  CPackSourceConfig.cmake  CaroGallery.vcxproj  CaroGame.sln  CaroGame.vcxproj  CaroTests-b12d07c_include.cmake  CaroTests.vcxproj  CaroUI.vcxproj  Continuous.vcxproj  DartConfiguration.tcl  Experimental.vcxproj  GameLogic.vcxproj  INSTALL.vcxproj  Nightly.vcxproj  NightlyMemoryCheck.vcxproj  PACKAGE.vcxproj  RUN_TESTS.vcxproj  ZERO_CHECK.vcxproj
extracted_content/: CSLTr_Week01.md  CSLTr_Week02.md  CSLTr_Week03.md  CSLTr_Week09.md  CSLTr_Week10.md  DeCuongChiTiet_OOP1.md  DoAnCaro.md
extracted_content/week01_images/: image15.wmf
extracted_content/week03_images/: image13.wmf  image14.wmf  image16.wmf  image18.wmf  image19.wmf  image2.wmf  image21.wmf  image3.wmf  image6.wmf  image9.wmf
extracted_content/week04_images/: image13.wmf  image2.wmf  image5.wmf  image7.wmf  image9.wmf
research/: algorithms-to-master.md  caro-project-strategy.md  code-style-guide.md  course-analysis.md  libraries-reference.md
week1/: 25310023.cpp  25310023_25310057_25310043.cpp  A.cpp  B.cpp  C.cpp  exercise-th.md  exercise.md
week2/: 25310023_25310057_25310043.cpp  D.cpp  E.cpp  F.cpp  baitapvenha.md  exercise-th.md  exercise.md
week3/: note.md
week3/codeforces/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp
week3/header/: Equation.h  EquationIO.h
week3/source/: Equation.cpp  EquationIO.cpp  main.cpp
